--- a/src/app/farmer/component/farmer-dashboard/farmer-bank-details/farmer-bank-details.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-bank-details/farmer-bank-details.component.html
@@ -97,7 +97,7 @@
 			<div class="form-group">
 				<div class="form-comp-top mb-3">
 					<div class="name">
-						<label for="accountNo">{{ 'farmer_bank_details.mobile_number' | translate }}</label>
+						<label for="accountNo">{{ 'farmer_bank_details.mobile_number' | translate }}*</label>
 					</div>
 					<input type="text" class="form-control"  placeholder="{{ 'farmer_bank_details.mobile_number' | translate }}"
 					 formControlName="contactNo">
