--- a/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
+++ b/src/app/farmer/component/farmer-my-account/farmer-my-account.component.html
@@ -61,7 +61,7 @@
                     </p>
                     <p *ngIf="farmerInfo.cities"> Places where I can deliver:</p>
                     <p>
-                      <i *ngFor="let city of farmerInfo.cities" lass="fa fa-map-marker" aria-hidden="true">{{city}}, </i>
+                      <i *ngFor="let city of farmerInfo.cities" lass="fa fa-map-marker" aria-hidden="true">{{city}}&nbsp;&nbsp; </i>
                     </p>
                     <p>
                       <span class="font-weight-bold">Aadhaar Address: </span>
