--- a/src/app/farmer/component/farmer-dashboard/farmer-current-order/farmer-current-order.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-current-order/farmer-current-order.component.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="bottom">
-        <div class="name">{{ 'farmer_current_order.product_name' | translate }}:{{order.name}}</div>
+        <div class="name">{{order.name}}</div>
         <div class="address">{{ 'farmer_current_order.address' | translate }}:{{order.address?.addressLine}} {{order.address?.city}}
         {{order.address?.state}} {{order.address?.district}} {{order.address?.pincode}}</div>
         <div class="quantity">{{ 'farmer_current_order.quantity' | translate }}:{{order.quantity}} Kg</div>
