--- a/src/app/shared/help/help.component.html
+++ b/src/app/shared/help/help.component.html
@@ -10,7 +10,7 @@
 			<div id="card-306010" class="col-sm-8">
 				<!-- Embedded help video -->
 				<div style="position:relative;height:0;padding-bottom:56.21%">
-					<iframe src="https://www.youtube.com/embed/ONXfL6evR0Q?ecver=2" style="position:absolute;width:100%;height:100%;left:0"
+					<iframe src="../../assets/video/demo.mp4" style="position:absolute;width:100%;height:100%;left:0"
 					 width="641" height="360" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				</div>
 				<!-- How to register area starts here -->
