--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -172,3 +172,68 @@
     </a>
   </div>
 </div> -->
+
+
+<!-- Button trigger modal -->
+<button type="button" id="langBtn" #langBtn class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+    Launch demo modal
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true"  data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle">Choose Your Language</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card"  >
+                        <div class="card-body">
+                          <h5 class="card-title"> <a href="javascript:void();" (click)="chooseLang('en')" class="btn btn-primary">English</a></h5>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card"  >
+                        <div class="card-body">
+                          <h5 class="card-title"> <a href="javascript:void();" (click)="chooseLang('hindi')" class="btn btn-primary">हिंदी</a></h5>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card"  >
+                        <div class="card-body">
+                          <h5 class="card-title"> <a href="javascript:void();" (click)="chooseLang('punjabi')" class="btn btn-primary">ਪੰਜਾਬੀ</a></h5>
+                        </div>
+                      </div>
+                </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-4">
+                      <div class="card"  >
+                          <div class="card-body">
+                            <h5 class="card-title"> <a href="javascript:void();" (click)="chooseLang('tamil')" class="btn btn-primary">தமிழ்</a></h5>
+                          </div>
+                        </div>
+                  </div>
+                  <div class="col-md-4">
+                      <div class="card"  >
+                          <div class="card-body">
+                            <h5 class="card-title"> <a href="javascript:void();" (click)="chooseLang('telegu')" class="btn btn-primary">తెలుగు</a></h5>
+                          </div>
+                        </div>
+                  </div>
+                </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" #closeModal class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
