--- a/src/app/customer/component/customer-my-cart/customer-my-cart.component.html
+++ b/src/app/customer/component/customer-my-cart/customer-my-cart.component.html
@@ -21,7 +21,7 @@
 								<div *ngFor="let cartItem of cartItems">
 									<div *ngIf="item.productName==cartItem">
 									<!-- Card image -->
-										<img src="../../../../../assets/order/{{cartItem}}.jpg" alt="{{item.productName}}">
+										<img class="img_cart" src="../../../../../assets/order/{{cartItem}}.jpg" alt="{{item.productName}}">
 									</div>
 								</div>
 							</td>
