--- a/src/app/shared/connect-us/connect-us.component.html
+++ b/src/app/shared/connect-us/connect-us.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-100">
+<div class="container-fluid mt-100" id="cont_us">
   <div class="row">
       <div class="col-md-12">
         <h1>{{ 'connect_us.contact_us' | translate }}</h1>
