--- a/src/app/shared/policies/policies.component.html
+++ b/src/app/shared/policies/policies.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-100">
+<div class="container-fluid mt-100" id="policies">
         <div class="row">
             <div class="col-md-12">
               <h1> {{ 'policy.policies' | translate }} </h1>
