--- a/src/app/farmer/component/farmer-dashboard/farmer-current-order/farmer-current-order.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-current-order/farmer-current-order.component.html
@@ -147,7 +147,7 @@
   </div>
 </div>
 
-//Rating modal
+<!-- Rating modal -->
   <div *ngIf="otpVerified==true">
     <div class="modal fade" id="exampleModal4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
