--- a/src/app/farmer/component/farmer-dashboard/farmer-current-order/farmer-current-order.component.html
+++ b/src/app/farmer/component/farmer-dashboard/farmer-current-order/farmer-current-order.component.html
@@ -30,7 +30,7 @@
           style="margin-top:13px;">
           {{ 'farmer_current_order.delivered' | translate }}
         </a>
-        <a id="track" class="launch-map" data-toggle="modal" data-target="#mapModal" (click)="track(order.address.city)"
+        <a id="track" class="launch-map" data-toggle="modal" data-target="#mapModal" (click)="track()"
           style="margin-top:13px;">Track
         </a>
       </span>
@@ -180,9 +180,18 @@
 
     <!-- Accept Modal -->
 <div class="modal fade" id="mapModal" tabindex="-1" role="dialog" aria-labelledby="mapModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-          <div #gmap style="width:600px;height:600px"></div>
+    <div class="modal-dialog" style="width:700px;height:700px;margin-bottom: 20px" role="document">
+      <div class="modal-content" style="width:640px;margin-bottom: 20px">
+          <div class="modal-header">
+              <h5 class="modal-title">Navigate to Customer Address - {{WindowRef.p}} Km.</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                <div #gmap style="width:600px;height:600px"></div>
+            </div>
+          
       </div>
     </div>
   </div>
