--- a/src/app/customer/component/product-list/product-list.component.html
+++ b/src/app/customer/component/product-list/product-list.component.html
@@ -29,7 +29,7 @@
       <label class="my-3">
         <span>{{ 'products.filter_by_price' | translate }}</span>
       </label>
-      <ion-range-slider #sliderElement type="double" min="0" [max]=max_price [to]=max_price prefix="{{ 'products.price' | translate }}:"
+      <ion-range-slider #sliderElement type="double" min="0" [max]=max_price_slider [to]=max_price_slider prefix="{{ 'products.price' | translate }}:"
         postfix=" Rs" keyboard:true (onFinish)="myOnFinishPrice($event)">
       </ion-range-slider>
       <!-- filtered by price end-->
@@ -37,7 +37,7 @@
       <label class="my-3">
         <span>{{ 'products.filter_by_quantity' | translate }}</span>
       </label>
-      <ion-range-slider #sliderElement type="double" min="0" [max]=max_quantity [to]=max_quantity prefix="{{ 'products.quantity' | translate }}:"
+      <ion-range-slider #sliderElement type="double" min="0" [max]=max_quantity_slider [to]=max_quantity_slider prefix="{{ 'products.quantity' | translate }}:"
         postfix=" Kg" (onFinish)="myOnFinishQuantity($event)">
       </ion-range-slider>
       <!-- filtered by Quantity end-->
